# topojson

./: .flake8  .gitignore  .travis.yaml  .travis.yml  =10  LICENSE  README.md  Untitled.ipynb  docs.md  g.topo.json  make-API-reference.ipynb  pyproject.toml  requirements.txt  style_docs_markdown_API.ipynb  test_join.ipynb  testing.ipynb  ws_topojson.code-workspace
.github/: funding.yml
.github/workflows/: benchmark.yml  pypi.yml  test.yml
benchmark/: benchmarker.py  reporter.py  run_benchmarks_topojson.py
benchmark/benchmarks/: benchmarks_topojson.py
benchmark/results/: benchmark_results.csv
docs/: 1-index.md  2-overview.md  3-installation.md  4-example-usage.md  404.html  5-how-it-works.md  6-api-reference.md  7-contributing.md  Gemfile  _config.yml  api-reference.md  contributing  contributing.md  example-usage.md  how-it-works.md  index.html  index.md  installation.md  overview.md
docs/api/: api-reference.md  topojson.core.cut.md  topojson.core.dedup.md  topojson.core.extract.md  topojson.core.hashmap.md  topojson.core.join.md  topojson.core.topology.md  topojson.ops.md  topojson.utils.md
docs/example/: example-usage.md  input-types.md  output-types.md  settings-tuning.md  tuning.md  tuning_embed.js  tuning_prequantize.vl.json
docs/example-usage/: example-1.md  example-2.md  example-usage.md
docs/json/: example_color_mark.vl.json  example_mesh.vl.json  example_presimplify.vl.json  example_simplify_alg.vl.json  example_simplify_with.vl.json  example_toposimplify.vl.json  example_winding_order.vl.json
generate/: make-API-docs.ipynb
notebooks/: example usage.ipynb  example usage_retest.ipynb  ipywidgets_interaction.ipynb  panel_interaction.ipynb  topojson.ipynb
recipe/: meta.yaml
tests/: benchmark_compute.py  benchmark_visz.py  test_cut.py  test_dedup.py  test_extract.py  test_hashmap.py  test_join.py  test_ops.py  test_options.py  test_to_json.py  test_topology.py
tests/files_geojson/: duplicate_polygon_reversed.geojson  example_data_africa.geojson  feature.geojson  feature_collection.geojson  geojson_1.json  geojson_2.json  geom_collection.geo.json  mesh2d.geojson  multipolygon_with_hole.geojson  multipolygon_with_hole_from_topojson.geojson  naturalearth_alb_grc.geojson  naturalearth_lowres.geojson  nybb.geojson  (+3 more)
topojson/: __init__.py  cut.py  cutdedup.py  dedup.py  extract.py  hashmap.py  join.py  ops.py  test.topo.json  topo2geojson.py  topology.py  utils.py
(+35 files in other folders)
