[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "topojson"
dynamic = ["version", "description"]
authors = [
    {name = "Mattijn van Hoek", email = "mattijn@gmail.com"},
]
dependencies = ["numpy", "shapely"]
keywords = ["topojson", "python", "github", "topology", "geojson"]
readme = "README.md"
classifiers = ["License :: OSI Approved :: BSD License"]


[project.optional-dependencies]
dev = [    
    "shapely",
    "geojson", 
    "simplification", 
    "pyshp", 
    "fiona", 
    "geopandas", 
    "altair", 
    "ipywidgets"    
]

[project.urls]
Documentation = "https://mattijn.github.io/topojson"
Source = "https://github.com/mattijn/topojson"
Releases = "https://github.com/mattijn/topojson/releases"
