[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "topojson"
requires-python = ">=3.8"
dynamic = ["version", "description"]
authors = [
    {name = "Mattijn van Hoek", email = "mattijn@gmail.com"},
]
dependencies = ["numpy", "shapely", "packaging"]
keywords = ["topojson", "python", "github", "topology", "geojson"]
readme = "README.md"
classifiers = ["License :: OSI Approved :: BSD License"]


[project.optional-dependencies]
dev = [    
    "geopandas", 
    "fiona",
    "geojson", 
    "simplification", 
    "pyshp", 
    "altair", 
    "ipywidgets"    
]

[project.urls]
Documentation = "https://mattijn.github.io/topojson"
Source = "https://github.com/mattijn/topojson"
Releases = "https://github.com/mattijn/topojson/releases"
